finished and implemented validation and db data check for users
